@@ -2,4 +2,3 @@
 ConfigureNewPrinters=yes
 DisablePrintersOnRemoval=no
 DefaultCUPSPolicy=
-Debug=yes
